# AI-Notebook

./: .coderabbit.yaml  .env.sample  .gitignore  README.md  Taskfile.yml  docker-compose.new.yml  docker-compose.yml  package-lock.json
.devcontainer/backend-new/: devcontainer.json
.devcontainer/frontend-nextjs/: devcontainer.json
.devcontainer/frontend-nextjs-new/: devcontainer.json
.github/: CODEOWNERS  auto_assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: actionlint.yml  assign-author-pr.yml  auto_assign.yml  ci.yml  gcp_deploy.yml  pytest.yml  sphinx.yml
.streamlit/: config.toml
.trunk/: trunk.yaml
backend/: .env.sample  Dockerfile.backend  Dockerfile.backend.new  Dockerfile.cloud_backend  README.md  cloudbuild.yaml  cloudbuild_backend.yml  dev-cors-config.json  entrypoint.sh  pyproject.toml  pytest.ini
backend/app/: database.py  db.py  main.py  migrate_cloud_db.py  migrate_db.py
backend/app/cruds/: answers.py  exercises.py  files.py  notes.py  outputs.py  users.py
backend/app/db/alembic_dev/: alembic.ini  env.py
backend/app/db/alembic_dev/versions/: 0466229c861e_add_user_answer.py  0f83d2a018a9_dev_migration.py  1d88d95ae783_update_outputs_table_and_add_outputs_.py  1f25e371eadc_add_exercise_file_association_table.py  22e84fe86fcb_upgrade_answers_table.py  33e1bfce096c_add_style_column.py  5dac468e846d_add_answers_table.py  6af004152e59_create_note_table.py  74e82392f17f_make_difficulty_nullable.py  7a2fc39f5b0b_add_title_column.py  828f9c90de2f_dev_migration.py  8b4935a1163c_add_output_table.py  93f95e7aa12b_create_exercise_table.py  a03982887391_add_relationship.py  a4d2ee11c335_add_difficulty_column_in_exercise.py  d947474f6b3c_add_answers_table.py  ee7ece65c406_add_create_update_columns.py  efc4b7e31981_add_updated_at_column_to_files.py
backend/app/db/alembic_dev/versions_backup/: 0466229c861e_add_user_answer.py  0f83d2a018a9_dev_migration.py  1d88d95ae783_update_outputs_table_and_add_outputs_.py  3a4d6b2829e1_dev_migration.py  41b7289ead85_use_firebase.py  5dac468e846d_add_answers_table.py  8b4935a1163c_add_output_table.py  a03982887391_add_relationship.py  b3201e22d182_update_answers_table.py  efc4b7e31981_add_updated_at_column_to_files.py
backend/app/db/alembic_test/: alembic.ini  env.py
backend/app/db/alembic_test/versions/: 112b4c0f26dc_create_exercise_table.py  5026a1da26e7_test_migration.py  545d9e99ae08_add_output_table.py  a53b2fedf2e7_test_migration.py  b6df2ff64f4a_test_migration.py  e19876d7c6c7_make_difficulty_nullable.py
backend/app/models/: answers.py  exercises.py  exercises_files.py  exercises_user_answer.py  files.py  notes.py  output.py  outputs.py  outputs_files.py  users.py
backend/app/routers/: answers.py  exercises.py  exercises_stream.py  files.py  notes.py  outputs.py  outputs_stream.py  users.py
backend/app/schemas/: answers.py  exercises.py  exercises_user_answer.py  files.py  notes.py  outputs.py  users.py
backend/app/utils/: claude_request_stream.py  convert_mp4_to_mp3.py  essay_question.py  gemini_extract_text_from_audio.py  gemini_request.py  gemini_request_stream.py  multiple_choice_question.py  operate_cloud_storage.py  operation_cloud_storage.py  user_answer.py  user_auth.py
backend/docs/source/: app.models.rst  app.schemas.rst  conf.py  index.rst
backend/tests/: conftest.py  conftest_ci.py  test_claude_request_stream.py  test_convert_mp4_to_mp3.py  test_cruds_answers.py  test_cruds_exercise.py  test_cruds_files.py  test_cruds_notes.py  test_cruds_outputs.py  test_database.py  test_essay_question.py  test_files.py  test_gemini_extract_text_from_audio.py  test_gemini_request.py  test_gemini_request_stream.py  test_migrate_cloud_db.py  test_multiple_choice_question.py  test_operate_cloud_strage.py  test_operation_cloud_storage.py  test_routers_answers.py  test_routers_exercises.py  test_routers_exercises_stream 2.py  test_routers_exercises_stream.py  test_routers_files.py  test_routers_notes.py  test_routers_outputs.py  test_routers_outputs_stream.py  test_user_answer.py  test_user_auth.py
docs/: _bk_index.html  index.html
docs/backend/: .buildinfo  app.cruds.html  app.html  app.models.html  app.routers.html  app.schemas.html  app.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/frontend/: .buildinfo  app.html  app.pages.html  app.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
frontend/: Dockerfile.cloud_frontend  README.md  cloudbuild_frontend.yml  entrypoint.sh  pyproject.toml  pytest-coverage.txt  pytest.ini  pytest.xml
frontend-nextjs/: .env.local.sample  .env.production.local.sample  .gitignore  Dockerfile  Dockerfile.frontend-nextjs  Dockerfile.frontend-nextjs.new  Dockerfile.gcloud-nextjs  README.md  biome.json  cloudbuild.yaml  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend-nextjs/__tests__/: middleware.test.ts  page.test.tsx
frontend-nextjs/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/hooks/: useAuthFetch.ts  useSignOut.ts
frontend-nextjs/lib/: firebase.ts
frontend-nextjs/providers/: AuthProvider.tsx  readme.md
frontend-nextjs/public/: captions.vtt
frontend-nextjs/src/: middleware.ts
frontend-nextjs/utils/: withAuth.tsx
frontend/.streamlit/: config.toml
frontend/app/: main.py  sugimoto.main.py  sugimoto.test.main.py
frontend/app/pages/: auth_test.py  flyer.py  input_text.py  notebook.py  output.py  output_note.py  output_test.py  quill_sample.py  select_files.py  study_ai_exercise.py  study_ai_note.py  upload_files.py  upload_image.py
frontend/app/utils/: output.py  sidebar.py
frontend/docs/source/: app.pages.rst  app.rst  app.utils.rst  conf.py  index.rst
frontend/tests/: stream_mock_server.py  test_main.py  test_notebook.py  test_output.py  test_select_files.py  test_study_ai_exercise.py  test_study_ai_note.py  test_upload_files.py
(+299 files in other folders)
