[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.3"
mypy = "^1.10.0"


[tool.ruff]
exclude = [
    ".ruff_cache"
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black    
    "E", # error
    "W", # warning
    "I", # isort
]
ignore = []
fixable = ["ALL"]


[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
